--- a/src/AutoSetup/Resources.resx
+++ b/src/AutoSetup/Resources.resx
@@ -126,7 +126,7 @@
     <comment>The format-able message the diagnostic displays.</comment>
   </data>
   <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Sharpy</value>
+    <value>AutoSetup</value>
     <comment>The title of the diagnostic.</comment>
   </data>
 </root>
